
1.32     not yet released
          - added recurring downtimes
          - added in_check|notification_period to extinfo
          - added sort by status information
          - added reschedule 'now' link to extinfo page
          - added mongodb support (experimental)
          - added long plugin output to excel export
          - reporting:
            - added report editor
            - added cron editor for scheduling reports
            - report fileextension is now .rpt
          - Bug Fixes
            - fixed mobile interface (jquery version was too old)
            - fixed javascript error on comments/downtimes page
            - fixed deleting all downtimes from extinfo page
            - fixed removing comments/downtimes from extinfo page

1.30     Sun May  6 19:37:59 CEST 2012
          - added sla reporting
            - implemented 'last12months'
            - implemented months breakdown
          - updated jquery to 1.7.2
          - do not reenable ssi files on pkg updates
          - Bug Fixes
            - fixed adding bookmarks
            - fixed selecting multiple filter
            - fixed statusmap js errors

1.28     Sat Apr 28 18:53:49 CEST 2012
          - added support for display_name
          - added filter for custom variables
          - show host/servicegroups only if contact has permission for at least on host/service
          - add new url parameter 'minimal' for hiding everything except the data (Pierre Mavro)
          - added documentation about common CGI parameters
          - added init script
          - added event details to logs excel export
          - added site name to excel export (Mark Wilkinson)
          - added sound alerts
          - added config item for custom host/service action icons
          - added config item to convert usernames to upper/lowercase
          - set custom host/service action icons by custom variable
          - added config item for cookie_path