@@ -84,6 +84,17 @@
       <td class="statusOdd">End:</td>
       <td class="statusOdd"><a href="#" onclick="show_cal('end_time')"><img src="[% url_prefix %]thruk/themes/[% theme %]/images/calendar.png" width="16" height="16" alt="pick date" style="vertical-align: text-bottom"></a> <input type="text" value="[% format_date(date.now+downtime_duration, '%Y-%m-%d %H:%M:%S') %]" id="end_time" name="end_time" size="20" onkeyup="verify_time(this.id)"></td>
     </tr>
+    <tr id="row_downtime_options">
+      <td class="statusOdd">Options:</td>
+      <td class="statusOdd">
+        Child Hosts:<br>
+        <select name="childoptions">
+          <option value="0">Do nothing with child hosts</option>
+          <option value="1">Schedule triggered downtime for all child hosts</option>
+          <option value="2">Schedule non-triggered downtime for all child hosts</option>
+        </select>
+      </td>
+    </tr>
     <tr id="row_reschedule_options">
       <td class="statusOdd">Options:</td>
       <td class="statusOdd">
